--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip wheel
-          if [ -f requirements.txt ]; then
-            pip install -r requirements.txt
-          fi
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
           pip install pytest ruff
           # If your project is a package, install it (safe no-op if not)
           if [ -f pyproject.toml ] || [ -f setup.cfg ] || [ -f setup.py ]; then
