Fix CI YAML: remove duplicates, add robust install

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
           pip install --upgrade setuptools wheel
           pip install -r requirements.txt
           pip install pytest ruff
-          # Install as editable if project is a package (safe no-op if not)
+          # If your project is a package, install it (safe no-op if not)
           if [ -f pyproject.toml ] || [ -f setup.cfg ] || [ -f setup.py ]; then
             pip install -e . || true
           fi
